force-app/main/default/objects/SFDC_Speaker_Role__c/SFDC_Speaker_Role__c.object-meta.xml
<CustomObject>
    <description>Describes which role a speaker is assuming at a particular Conference.</description>
    <label>Speaker Role</label>
    <nameField>
        <displayFormat>SPK-{000000}</displayFormat>
        <label>Speaker Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speaker Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>