force-app/main/default/objects/SFDC_Speaker_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conference Speaker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N40000001U8NOEA0</relationshipName>
    <type>Lookup</type>
</CustomField>