force-app/main/default/objects/SFDC_Speaker_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interviewee</fullName>
            </value>
            <value>
                <fullName>Keynote</fullName>
            </value>
            <value>
                <fullName>Moderator</fullName>
            </value>
            <value>
                <fullName>Oral Abstract</fullName>
            </value>
            <value>
                <fullName>Panel Member</fullName>
            </value>
            <value>
                <fullName>Plenary Speaker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>