force-app/main/default/objects/SFDC_Speaker_Role__c/fields/SFDC_Conference__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Conference__c</fullName>
    <label>Conference</label>
    <referenceTo>SFDC_Conference__c</referenceTo>
    <relationshipName>R00N40000001U8NLEA0</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>