force-app/main/default/objects/SFDC_Speaker_Role__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <description>Name of speaker&apos;s presentation and/or topic</description>
    <label>Topic</label>
    <type>TextArea</type>
</CustomField>