force-app/main/default/objects/SFDC_Speaker_Role__c/fields/Topic_Type__c.field-meta.xml
<CustomField>
    <fullName>Topic_Type__c</fullName>
    <label>Topic Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preventative Science</fullName>
            </value>
            <value>
                <fullName>Clinical Science</fullName>
            </value>
            <value>
                <fullName>Treatment Innovations</fullName>
            </value>
            <value>
                <fullName>Global Response</fullName>
            </value>
            <value>
                <fullName>Emerging Epidemics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>